testData/annotator/TypeAnnotator/TypeAnnotatorTestData.secarc
component A {

    accesscontrol off;

    <error descr="Component cannot be resolved">B</error> b;
}